--- a/src/css/shop.css
+++ b/src/css/shop.css
@@ -26,5 +26,5 @@ h1 {
     justify-items: center;
     gap: 1.5rem;
     padding: 1.5rem;
-    overflow-y: scroll;
+    overflow-y: hidden;
 }
